--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
   "peerDependencies": {
     "solid-js": "^1.6.0"
   },
@@ -24,6 +27,8 @@
   },
   "devDependencies": {
     "solid-js": "^1.8.15",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tsconfig-moon": "^1.3.0",
+    "typescript": "^5.5.4"
   }
 }
