build: Add biome.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "tsconfig-moon/tsconfig.solid.json",
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "esnext"
-    ]
+    "lib": ["dom", "esnext"]
   },
   "include": ["src/**/*"]
 }
