--- a/package.json
+++ b/package.json
@@ -2,13 +2,7 @@
   "name": "@moonrepo/horizon",
   "version": "0.0.1",
   "description": "Our component library and design system, powered by Solid and Tailwind.",
-  "keywords": [
-    "moonrepo",
-    "moon",
-    "repo",
-    "solid",
-    "ui"
-  ],
+  "keywords": ["moonrepo", "moon", "repo", "solid", "ui"],
   "author": "moon",
   "license": "MIT",
   "repository": "https://github.com/moonrepo/moon",
@@ -16,6 +10,8 @@
     "access": "public"
   },
   "scripts": {
+    "check": "biome check",
+    "check:fix": "biome check --write",
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
@@ -26,6 +22,7 @@
     "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "solid-js": "^1.8.15",
     "tailwindcss": "^3.4.1",
     "tsconfig-moon": "^1.3.0",
