--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "check": "biome check",
     "check:fix": "biome check --write",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "solid-js": "^1.6.0"
@@ -23,9 +25,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/docs-tools": "^8.2.6",
+    "daisyui": "^4.12.10",
     "solid-js": "^1.8.15",
+    "storybook": "^8.2.6",
+    "storybook-solidjs": "^1.0.0-beta.2",
+    "storybook-solidjs-vite": "^1.0.0-beta.2",
     "tailwindcss": "^3.4.1",
     "tsconfig-moon": "^1.3.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
